--- a/.github/workflows/web_server_deploy_and_test.yml
+++ b/.github/workflows/web_server_deploy_and_test.yml
@@ -2,12 +2,25 @@ name: Test and Deploy Web App
 on: push
 
 jobs:
+  demo_job_for_demo_sake:
+    runs-on: ubuntu-latest
+    steps:
+      - name: ECHOO (echo)
+        run: echo "Does this work??"
   test_web_app:
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Nginx Docker Image and Container
-        run: 
+        run: |
           docker image pull nginx
           docker container run -d -p 8080:80 nginx
+      - name: Test Web app is Running
+        run: |
           python3 -c "import requests; r = requests.get('http://localhost:8080'); print(r.status_code)"
           curl -s localhost:8080
+  deploy_web_app:
+    needs: [test_web_app, demo_job_for_demo_sake]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploying Web App to Cloud
+        run: echo "Deploying to cloud....."
